add new features

--- a/style.css
+++ b/style.css
@@ -28,6 +28,10 @@ a,
 }
 
 /* DESKTOP NAV */
+#desktop-nav {
+  background-color: rgb(216, 216, 140);
+  height: 15vh;
+}
 
 nav,
 .nav-links {
@@ -37,8 +41,7 @@ nav,
 nav {
   justify-content: space-around;
   align-items: center;
-  height: 12vh;
-  background-color: rgb(219, 219, 160);
+  height: 17vh;
 }
 
 .nav-links {
@@ -151,7 +154,7 @@ a:hover {
 /* SECTIONS */
 
 section {
-  padding-top: 6vh;
+  padding-top: 4vh;
   height: 96vh;
   margin: 0 10rem;
   box-sizing: border-box;
@@ -167,11 +170,12 @@ section {
 #profile {
   display: flex;
   justify-content: center;
-  gap: 8rem;
+  gap: 5rem;
   height: 80vh;
 }
 
 .section__pic-container {
+  position: relative;
   display: flex;
   height: 400px;
   width: 400px;
@@ -189,17 +193,21 @@ section {
 
 .section__text__p1 {
   text-align: center;
-  font-size: 1.4rem;
-  padding-top: 3rem;
+  margin-top: 4rem;
 }
 
 .section__text__p2 {
-  font-size: 1.6rem;
-  margin-bottom: 2rem;
+  font-size: 1.75rem;
+  margin-bottom: 1rem;
+}
+
+.lead {
+  font-size: 2rem;
+  text-align: center;
 }
 
 .title {
-  font-size: 2.5rem;
+  font-size: 3rem;
   text-align: center;
 }
 
@@ -214,7 +222,7 @@ section {
 
 .icon {
   cursor: pointer;
-  height: 2rem;
+  height: 2.5rem;
 }
 
 /* BUTTONS */
@@ -229,9 +237,8 @@ section {
   font-weight: 600;
   transition: all 300ms ease;
   padding: 1rem;
-  width: 12rem;
+  width: 10rem;
   border-radius: 2rem;
-  font-size: 1rem;
 }
 
 .btn-color-1,
@@ -266,11 +273,93 @@ section {
   gap: 1rem;
 }
 
+/* ABOUT SECTION */
+
+#about {
+  position: relative;
+  margin-top: 2rem;
+  block-size: fit-content;
+}
+
+.about-containers {
+  gap: 2rem;
+  margin: 2rem;
+}
+
+.about-details-container {
+  justify-content: center;
+  flex-direction: column;
+  height: 80%;
+}
+
+.about-containers,
+.about-details-container {
+  display: flex;
+}
+
+.about-pic {
+  border-radius: 2rem;
+}
+
+.arrow {
+  position: relative;
+  right: -100rem;
+  bottom: 2.5rem;
+}
+
+.details-container {
+  padding: 2rem;
+  flex: 1;
+  background: white;
+  border-radius: 2rem;
+  border: rgb(53, 53, 53) 0.1rem solid;
+  border-color: rgb(163, 163, 163);
+  text-align: center;
+}
+
+.article-container {
+  display: flex;
+  text-align: initial;
+  flex-wrap: wrap;
+  flex-direction: row;
+  gap: 2.5rem;
+  justify-content: space-around;
+}
+
+article {
+  margin-top: 1rem;
+  display: flex;
+  width: auto;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+
+article .icon {
+  cursor: default;
+}
+
+.section-container {
+  gap: 4rem;
+  height: 75%;
+}
+
+.section__pic-container {
+  height: 400px;
+  width: 400px;
+  margin: auto 0;
+}
+
 /* dummy ctimeline */
 /* The actual timeline (the vertical ruler) */
+#timeline {
+  margin-top: 2rem;
+  block-size: fit-content;
+}
+
 .timeline {
   position: relative;
-  max-width: 1200px;
+  max-width: 1600px;
   margin: 3rem auto;
 }
 
@@ -301,7 +390,7 @@ section {
   width: 25px;
   height: 25px;
   right: -15px;
-  background-color: white;
+  background-color: black;
   border: 2px solid black;
   top: 15px;
   border-radius: 50%;
@@ -328,7 +417,7 @@ section {
   z-index: 1;
   right: 30px;
   border: medium solid black;
-  border-width: 10px 0 10px 10px;
+  border-width: 12px 0 10px 10px;
   border-color: transparent transparent transparent black;
 }
 
@@ -360,57 +449,32 @@ section {
   border-radius: 6px;
 }
 
-/* ABOUT SECTION */
-
-#about {
-  position: relative;
-  height: 30%;
-}
-
-.about-containers {
-  gap: 2rem;
-  margin-bottom: 2rem;
-  margin-top: 2rem;
-}
-
-.about-details-container {
-  justify-content: center;
-  flex-direction: column;
-}
-
-.about-containers,
-.about-details-container {
+.content h3 {
   display: flex;
+  justify-content: center;
+  font-weight: 500;
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
 }
 
-.about-pic {
-  border-radius: 2rem;
+.content h2 {
+  display: flex;
+  justify-content: center;
+  font-weight: 500;
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
 }
 
-.arrow {
-  position: absolute;
-  right: -5rem;
-  bottom: 2.5rem;
+.content p {
+  display: flex;
+  justify-content: center;
+  font-weight: 100;
+  font-size: 1.2rem;
 }
 
-.details-container {
-  padding: 1.5rem;
-  flex: 1;
-  background: white;
-  border-radius: 2rem;
-  border: rgb(53, 53, 53) 0.1rem solid;
-  border-color: rgb(163, 163, 163);
-  text-align: center;
-}
-
-.section-container {
-  height: 40%;
-}
-
-.section__pic-container {
-  height: 400px;
-  width: 400px;
-  margin: auto 0;
+.content li {
+  font-weight: 100;
+  font-size: 1rem;
 }
 
 /* EXPERIENCE SECTION */
@@ -419,65 +483,50 @@ section {
   position: relative;
 }
 
-.experience-sub-title {
-  color: rgb(85, 85, 85);
-  font-weight: 600;
-  font-size: 1.75rem;
-  margin-bottom: 2rem;
-}
-
 .experience-details-container {
   display: flex;
   justify-content: center;
-  flex-direction: column;
-}
-
-.article-container {
-  display: flex;
-  text-align: initial;
-  flex-wrap: wrap;
-  flex-direction: row;
-  gap: 2.5rem;
-  justify-content: space-around;
-}
-
-article {
-  margin: 1.5rem 0;
-  display: flex;
-  justify-content: space-around;
-}
-
-.education-icon {
-  height: 2rem;
-  padding-right: 2rem;
-}
-
-.article-detail {
-  display: flex;
-}
-
-.flag-icon {
-  display: flex;
-  margin: 0 2rem;
-  justify-content: space-evenly;
-  align-items: center;
-  height: 2rem;
-}
-
-article .icon {
-  cursor: default;
 }
 
 /* PROJECTS SECTION */
 
 #projects {
+  margin-top: 12rem;
   position: relative;
-  margin-top: 20%;
+  block-size: fit-content;
 }
 
-.color-container {
-  border-color: rgb(163, 163, 163);
-  background: rgb(250, 250, 250);
+#projects .title {
+  margin-bottom: 3rem;
+}
+
+.project-container {
+  position: relative;
+  padding: 2rem;
+  margin: auto;
+  margin-top: 1rem;
+  display: flex;
+  background: white;
+  border-radius: 2rem;
+  border: black 0.1rem solid;
+  justify-content: center;
+  align-items: center;
+  width: auto;
+}
+
+.project-container:hover {
+  background: rgb(88, 87, 87);
+  color: white;
+}
+
+.btn .btn-color-2 .project-btn:hover {
+  color: rgb(88, 87, 87);
+}
+
+.project-btn-container {
+  margin-left: 25%;
+  position: absolute;
+  left: 50%;
 }
 
 .project-img {
@@ -486,23 +535,27 @@ article .icon {
   height: 60%;
 }
 
-.project-title {
-  margin: 1rem;
-  color: black;
-}
-
 .project-btn {
   color: black;
   border-color: rgb(163, 163, 163);
 }
 
+.project-distinct {
+  margin: auto;
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+  width: 30%;
+  justify-content: center;
+  border: rgb(163, 163, 163) 0.1rem ridge;
+  border-radius: 20%;
+}
 /* CONTACT */
 
 #contact {
-  display: flex;
+  position: relative;
   justify-content: center;
-  flex-direction: column;
-  height: 88vh;
+  height: 80vh;
+  padding: 10%;
 }
 
 .contact-info-upper-container {
@@ -514,6 +567,7 @@ article .icon {
   background: (250, 250, 250);
   margin: 2rem auto;
   padding: 0.5rem;
+  width: 60%;
 }
 
 .contact-info-container {
@@ -542,13 +596,12 @@ article .icon {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  height: 7vh;
+  height: 12vh;
   background-color: rgb(219, 219, 160);
 }
 
 footer {
-  height: 10vh;
-  margin: 0 1rem;
+  height: 16vh;
   background-color: rgb(219, 219, 160);
 }
 
